# evDownloader

./: .gitignore  LICENSE  README.md  pyproject.toml  reqs.txt  requirements.txt
.beads/: metadata.json
.github/workflows/: ci.yml  release.yml
src/evdownloader/: __init__.py  browser.py  cli.py  config.py  models.py  service.py  session.py  utils.py
src/evdownloader/downloaders/: __init__.py  base.py  native.py  ytdlp.py
src/evdownloader/drm/: __init__.py  cdm.py  decrypt.py  detector.py  hls.py  license.py  models.py  mpd.py  proof.py  token_cache.py
src/evdownloader/extractors/: base.py  codigofacilito.py  platzi.py  udemy.py
src/video_downloader/: __init__.py  browser.py  cache.py  cli.py  config.py  models.py  service.py  session.py
src/video_downloader/downloaders/: base.py  native.py  ytdlp.py
src/video_downloader/extractors/: __init__.py  base.py  codigofacilito.py  platzi.py  udemy.py
tests/: test_browser.py  test_cli.py  test_codigofacilito.py  test_cookiefile.py  test_drm.py  test_drm_download.py  test_drm_proof.py  test_license.py  test_native_downloader.py  test_platzi_regex.py  test_resources.py  test_service.py  test_session.py  test_subtitles.py  test_udemy.py  test_utils.py  test_ytdlp_cookies.py  test_ytdlp_subtitles.py
