[project]
name = "evDownloader"
version = "0.1.1"
description = "Descargador de cursos de video para Platzi, Udemy y Codigofacilito, con extracción por interceptación de red y motor híbrido yt-dlp / nativo."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eduardo Vera", email = "eduvera@gmail.com" }]
keywords = [
    "platzi",
    "udemy",
    "codigofacilito",
    "downloader",
    "courses",
    "hls",
    "m3u8",
    "yt-dlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.12.0",
    "playwright>=1.60.0",
    "yt-dlp>=2026.1.1",
    "pywidevine>=1.8.0",
    "rnet>=2.4.2",
    "aiofiles>=24.1.0",
    "tqdm>=4.67.0",
    "platformdirs>=4.3.6",
    "unidecode>=1.3.8",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0",
]
drm = [
    "pywidevine>=1.8.0",
]

[project.scripts]
evdownloader = "evdownloader.cli:app"
evd = "evdownloader.cli:app"

[project.urls]
Homepage = "https://github.com/EduardoVeraE/evDownloader"
Repository = "https://github.com/EduardoVeraE/evDownloader"
Issues = "https://github.com/EduardoVeraE/evDownloader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evdownloader"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml", "reqs.txt"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer requiere llamadas (typer.Option/Argument) en los valores por defecto.
"src/evdownloader/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
